--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@expo/vector-icons": "~14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.26",
     "dayjs": "^1.11.13",
     "expo": "~52.0.0",
     "expo-av": "~15.0.2",
+    "expo-font": "~13.0.4",
     "expo-keep-awake": "~14.0.3",
     "expo-notifications": "~0.29.14",
     "react": "18.3.1",
@@ -28,13 +30,11 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "victory-native": "^36.6.11",
-    "expo-font": "~13.0.4",
-    "@react-native-picker/picker": "^2.6.1"
+    "victory-native": "^36.6.11"
   },
   "devDependencies": {
     "@types/react": "~18.2.45",
-    "typescript": "~5.3.3",
-    "expo-module-scripts": "^3.0.0"
+    "expo-module-scripts": "^3.0.0",
+    "typescript": "~5.3.3"
   }
 }
