--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "expo": "~52.0.0",
     "expo-av": "~15.0.2",
     "expo-font": "~13.0.4",
-    "expo-keep-awake": "~14.0.3",
     "expo-notifications": "~0.29.14",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
