--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "victory-native": "^36.6.11"
+    "victory-native": "^36.6.11",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@types/react": "~18.2.45",
