--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "18.3.1",
     "react-native-web": "~0.19.13",
     "@expo/metro-runtime": "~4.0.1",
-    "@types/react": "~18.3.12"
+    "@types/react": "~18.3.12",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@types/react": "~18.2.45",
