--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-node_modules
-.expo
-.expo-shared
-dist
-build
-npm-debug.log
-package-lock.json
+# node_modules
+# .expo
+# .expo-shared
+# dist
+# build
+# npm-debug.log
+# package-lock.json
