--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "target": "es2017",
-    "lib": [
-      "dom",
-      "es2017"
-    ],
+    "lib": ["dom", "es2017"],
     "jsx": "react-native",
     "moduleResolution": "node",
     "allowJs": true,
@@ -12,13 +10,7 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "strict": false,
-    "types": [
-      "react",
-      "react-native"
-    ]
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "extends": "expo/tsconfig.base"
+  "exclude": ["node_modules"]
 }
