Revert "Merge remote-tracking branch 'origin/codex/fix-typescript-errors-in-app.tsx-8dzax5'"
This reverts commit 1dc2b7185e82fb354cb99746f5fb130644771bac, reversing
changes made to d3af8db37ac6e511057bcacfc16ade23641839cf.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "target": "es2017",
-    "lib": ["dom", "es2017"],
+    "lib": [
+      "dom",
+      "es2017"
+    ],
     "jsx": "react-native",
     "moduleResolution": "node",
     "allowJs": true,
@@ -10,7 +12,13 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "strict": false,
-    "typeRoots": ["./types", "./node_modules/@types"]
+    "types": [
+      "react",
+      "react-native"
+    ]
   },
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ],
+  "extends": "expo/tsconfig.base"
 }
