--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.26",
     "dayjs": "^1.11.14",
-    "expo": "~52.0.0",
+    "expo": "~52.0.47",
     "expo-av": "~15.0.2",
     "expo-font": "~13.0.4",
     "expo-notifications": "~0.29.14",
@@ -29,17 +29,22 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-pip-android": "^1.2.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "victory-native": "^36.9.2"
+    "victory-native": "^36.9.2",
+    "expo-video": "~2.0.6"
   },
   "devDependencies": {
     "@types/react": "~18.2.45",
     "expo-module-scripts": "^3.0.0",
     "typescript": "~5.3.3"
+  },
+  "overrides": {
+    "expo-video": {
+      "react-native-pip-android": "1.0.1"
+    }
   }
 }
