--- a/app.json
+++ b/app.json
@@ -22,8 +22,7 @@
         "foregroundImage": ".\\assets\\adaptive-icon.fixed.png",
         "backgroundColor": "#F0FAFF"
       },
-      "package": "com.example.tim",
-      "supportsPictureInPicture": true
+      "package": "com.example.tim"
     },
     "plugins": [
       "expo-notifications",
@@ -31,8 +30,7 @@
       [
         "expo-video",
         {
-          "supportsBackgroundPlayback": true,
-          "supportsPictureInPicture": true
+          "supportsBackgroundPlayback": true
         }
       ]
     ],
