--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,5 +25,6 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+    <service android:name=".TimerService" android:exported="false" android:foregroundServiceType="mediaPlayback" />
   </application>
 </manifest>
