--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-av": "~15.0.2",
     "expo-font": "~13.0.4",
     "expo-notifications": "~0.29.14",
+    "expo-intent-launcher": "~10.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
