--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "victory-native": "^36.9.2",
-    "expo-video": "~2.0.6"
+    "expo-video": "~2.0.6",
+    "expo-keep-awake": "~14.0.3"
   },
   "devDependencies": {
     "@types/react": "~18.2.45",
