--- a/package.json
+++ b/package.json
@@ -11,37 +11,37 @@
     "lint": "echo 'add eslint if needed'"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@expo/vector-icons": "~14.0.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-community/slider": "4.5.5",
-    "@react-native-picker/picker": "2.9.0",
+    "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/slider": "4.5.6",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.26",
     "dayjs": "^1.11.14",
-    "expo": "~52.0.47",
-    "expo-av": "~15.0.2",
-    "expo-font": "~13.0.4",
-    "expo-notifications": "~0.29.14",
-    "expo-intent-launcher": "~10.5.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "victory-native": "^36.9.2",
-    "expo-video": "~2.0.6",
-    "expo-keep-awake": "~14.0.3"
+    "expo": "^53.0.0",
+    "expo-av": "~15.1.7",
+    "expo-font": "~13.3.2",
+    "expo-intent-launcher": "~12.1.5",
+    "expo-keep-awake": "~14.1.4",
+    "expo-notifications": "~0.31.4",
+    "expo-video": "~2.2.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "victory-native": "^36.9.2"
   },
   "devDependencies": {
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.0.10",
     "expo-module-scripts": "^3.0.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   }
 }
